Removed unnessecary code, fixed navbar collapse and footer collapse

--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@
   margin-right: auto;
 }
 
-@media (max-width: 768px){
+.btn-lg {
+  width: 250px;
+}
+
+@media (max-width: 800px){
   #text{
     font-size: 1.5rem;
   }
-  #small-links{
-    font-size: 1rem;
+  .small-links{
+    font-size: 0.5rem;
   }
   #small-links2{
     font-size: 1rem;
